update api attribute and attributevalue